// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuIcon should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled icon-button-night600 root uui-theme-loveship container"
  onClick={[Function]}
  tabIndex={-1}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;

exports[`MainMenuIcon should be rendered correctly with props 1`] = `
<a
  className="container uui-button-box uui-enabled -clickable icon-button-night600 root uui-theme-loveship container"
  onClick={[Function]}
  rel="noopener noreferrer"
  role="link"
  tabIndex={0}
  target="_blank"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</a>
`;
